bug: changed width so images aren't aligned right on mobile

--- a/views/product/style.css
+++ b/views/product/style.css
@@ -219,5 +219,5 @@ label {
 
 #flex-product > div:nth-child(1) {
   margin-bottom: 20px;
-  width:340px;
+  /* width:340px; */
 }
